# noise-repellent

./: README.md  build_and_deploy.sh  meson.build  reduce_latency.patch
lv2ttl/: manifest.multifs.ttl.in  manifest.ttl.in  nrepellent#stereo-x1.ttl.in  nrepellent#stereo-x16.ttl.in  nrepellent#stereo-x4.ttl.in  nrepellent#stereo.ttl.in  nrepellent#x1.ttl.in  nrepellent#x16.ttl.in  nrepellent#x4.ttl.in  nrepellent-adaptive#stereo.ttl.in  nrepellent-adaptive.ttl.in  nrepellent-adaptive_fs1#stereo.ttl.in  nrepellent-adaptive_fs1.ttl.in  nrepellent-adaptive_fs16#stereo.ttl.in  nrepellent-adaptive_fs16.ttl.in  nrepellent-adaptive_fs4#stereo.ttl.in  nrepellent-adaptive_fs4.ttl.in  nrepellent.ttl.in  nrepellentEx#stereo.ttl.in  nrepellentEx.ttl.in  nrepellent_dev#stereo.ttl.in  nrepellent_dev.ttl.in  nrepellent_fs1#stereo.ttl.in  nrepellent_fs1.ttl.in  nrepellent_fs16#stereo.ttl.in  nrepellent_fs16.ttl.in  nrepellent_fs4#stereo.ttl.in  nrepellent_fs4.ttl.in
plugins/: nrepellent-adaptive_fs1.c  nrepellent-adaptive_fs16.c  nrepellent-adaptive_fs4.c  nrepellent.c  nrepellentEx.c  nrepellent_dev.c  nrepellent_fs1.c  nrepellent_fs16.c  nrepellent_fs4.c
src/: noise_profile_state.c  noise_profile_state.h
subprojects/: libspecbleach.wrap  reduce_manual_latency.patch
